outdated GC login modifier removed from comments in code